Fixes overlap of cms head menu bar.

--- a/client/app/main/main.styl
+++ b/client/app/main/main.styl
@@ -1,7 +1,10 @@
 .thing-form
   margin 20px 0
 
-.fixed-header-stopper 
+.loggedIn
+  margin-top 50px
+
+.fixed-header-stopper
   -webkit-transform translateZ(0)
   transform translateZ(0)
 
@@ -27,16 +30,16 @@
   margin-top 70px
   padding 30px 0
   text-align center
-  
+
 .mb-draggable
   cursor move
   a
     cursor move
-    
+
 .mb-draggable-ghost
   background-color #2ECC71
-  
-.panel-chevron 
+
+.panel-chevron
   padding-left 0.5em
 
 .panel-heading
