--- a/client/themes/meanbase-starter/templates/home/home.styl
+++ b/client/themes/meanbase-starter/templates/home/home.styl
@@ -1,3 +1,2 @@
-.loggedIn #main-view
-	padding-top 70px
-	
+#main-view
+	padding-top 20px
